<resources>
    <string name="app_name">Ease.</string>
    <string name="right_app">Right and secure\noption to rent a\ncar</string>
    <string name="secure">Now is really easy and fast\nto rent a car with trustworthy people\nfrom all over the world</string>
    <string name="start">start</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="create_account">Create an account</string>
    <string name="have_account">Do you have an account already?</string>
    <string name="Lets_login">Let\'s Login</string>

    <string name="whatsnew">What\'s new on Ease?</string>
    <string name="best_seller">Best Seller</string>
    <string name="recent">Recent</string>

    <string name="name">name</string>
    <string name="username">username</string>
    <string name="birthdate">birthdate</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="other">other</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="join_ease">Joint to Ease and discover all the possibilities</string>

    <string name="gender">Gender</string>

    <string name="step">Step 1 of 3</string>
    <string name="step1of3">Step 1 of 3</string>
    <string name="step2of3">Step 2 of 3</string>

    <string name="signup">Sign up</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="step3of3">Step 3 of 3</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="see_password">see password</string>
    <string name="rented_cars">rented cars</string>
    <string name="pay_methods">pay methods</string>
    <string name="published_cars">published cars</string>
    <string name="language">language</string>
    <string name="logout">logout</string>
    <string name="security">security</string>
    <string name="my_profile">My Profile</string>
    <string name="save">save</string>
    <string name="security_info">Password can be changed anytime needed but, we recommend to change it every 6 months</string>
    <string name="current_password">current password</string>
    <string name="new_password">new password</string>
    <string name="confirm_new_password">confirm new password</string>
    <string name="publish_car">publish a car</string>
    <string name="step1of2">step 1 of 2</string>
    <string name="car_name">car name</string>
    <string name="model">model</string>
    <string name="price_per_day">price per day</string>
    <string name="info_of_car">write down all the features from the car</string>
    <string name="step2of2">step 2 of 2</string>
    <string name="publish">publish</string>
    <string name="add_image">add an image</string>
    <string name="description">description</string>
    <string name="rent_per_day">rent per day</string>
    <string name="best_deals">Best deals for you</string>
    <string name="search_now">search now</string>
    <string name="rent">rent</string>
    <string name="best_sellers">Best Sellers</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="my_published_cars">My Published Cars</string>
    <string name="published">published</string>
    <string name="drafts">drafts</string>
    <string name="looking_for_a_car">looking for a car?</string>
    <string name="payment">Payment</string>
    <string name="number">number</string>
    <string name="expire_date">expire date</string>
    <string name="zip_code">zip code</string>
    <string name="add_payment">add payment</string>
    <string name="my_favorite_cars">My Favorite Cars</string>
    <string name="favorite_cars">favorites cars</string>
    <string name="tvOrderNumber">Ordern #</string>
    <string name="car">Car</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="return_date">return date</string>
    <string name="tvOrderDetail">Order Detail</string>
    <string name="empty_favorites">There\'s no favorites yet</string>
    <string name="payment_empty">There\'s no payments created yet</string>
    <string name="empty_rented">There\'s no rented cars yet</string>
    <string name="empty_published">You haven\'t published a car yet</string>


</resources>