<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/blury_background"
        android:scaleType="centerCrop"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toTopOf="parent"
            app:drawableStartCompat="@drawable/ic_ease_logo"
            android:drawablePadding="6dp"
            style="@style/h3"
            android:text="@string/app_name"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tvLetsLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/h3"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/tvAppName"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            android:text="@string/join_ease"
            android:textStyle="bold"
            android:textSize="25sp"
            />

        <TextView
            android:id="@+id/tvLittleWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h2"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/tvLetsLogin"
            android:layout_marginTop="15dp"
            android:text="@string/step1of3"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            app:layout_constraintTop_toBottomOf="@id/tvLittleWelcome"
            style="@style/editText"
            android:hint="@string/name"
            android:inputType="text"

            />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="0dp"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            app:layout_constraintTop_toBottomOf="@id/etName"
            style="@style/editText"
            android:hint="@string/username"
            />

        <EditText
            android:id="@+id/etBirthdate"
            android:layout_width="0dp"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            app:layout_constraintTop_toBottomOf="@id/etUsername"
            android:inputType="none"
            android:textIsSelectable="true"
            style="@style/editText"
            android:hint="@string/birthdate"
            />

        <TextView
            android:id="@+id/tvGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h2"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/etBirthdate"
            android:layout_marginTop="16dp"
            android:text="@string/gender"
            android:textStyle="bold"
            android:textColor="@color/raisin_black"
            />

        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            app:layout_constraintTop_toBottomOf="@id/tvGender"
            android:orientation="horizontal"
            android:checkedButton="@id/rbFemale"
            >
            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:layout_weight="1"
                />
            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:layout_weight="1"

                />
            <RadioButton
                android:id="@+id/rbOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"
                />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_height="@dimen/medium_button_height"
            style="@style/purpleButtonStyle"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/rgGender"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            android:text="@string/next" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLoginLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLoginRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>