<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        >
        <ImageButton
            android:id="@+id/ibReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_return"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:text="@string/security"
            android:gravity="center_vertical"
            android:textSize="24sp"
            android:textColor="@color/jet_black"

            />
    </LinearLayout>

    <TextView
        android:id="@+id/tvSecurityInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/security_info"
        android:fontFamily="@font/poppins_light"
        android:textSize="15sp"
        android:layout_marginTop="24sp"
        app:layout_constraintTop_toBottomOf="@id/llHeader"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        />

    <EditText
        android:id="@+id/etCurrentPassword"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:hint="@string/current_password"
        android:inputType="textPassword"
        android:layout_marginTop="54dp"
        app:layout_constraintTop_toBottomOf="@id/tvSecurityInfo"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        style="@style/editText"
        />

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/etCurrentPassword"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        style="@style/editText"
        />

    <EditText
        android:id="@+id/etConfirmNewPassword"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/etNewPassword"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        style="@style/editText"
        />

    <CheckBox
        android:id="@+id/cbSeePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/etConfirmNewPassword"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        android:fontFamily="@font/poppins_light"
        android:textColor="@color/raisin_black"
        android:text="@string/see_password"
        />

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/electric_indigo"
        android:textAllCaps="false"
        android:text="@string/save"
        style="@style/purpleButtonStyle"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/cbSeePassword"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>