<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/blury_background"
        android:scaleType="centerCrop"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvAppName"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:drawablePadding="6dp"
            android:text="@string/app_name"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_ease_logo"
            app:layout_constraintStart_toStartOf="@id/guidelineIntroLeft"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvRightSecureOption"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/right_app"
            app:layout_constraintStart_toStartOf="@id/guidelineIntroLeft"
            app:layout_constraintTop_toBottomOf="@id/tvAppName" />

        <TextView
            android:id="@+id/tvRegister"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/guidelineIntroLeft"
            app:layout_constraintTop_toTopOf="@id/tvRightSecureOption" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGoToRegister"
            style="@style/purpleButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/medium_button_height"
            android:layout_marginTop="4dp"
            android:text="@string/create_account"
            app:layout_constraintStart_toStartOf="@id/guidelineIntroLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineIntroRight"
            app:layout_constraintTop_toBottomOf="@id/tvRegister"
            />

        <TextView
            android:id="@+id/tvAccountAlready"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/have_account"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guidelineIntroLeft"
            app:layout_constraintTop_toBottomOf="@id/btnGoToRegister" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGoToLogin"
            style="@style/whiteButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/medium_button_height"
            android:layout_marginTop="4dp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="@id/guidelineIntroRight"
            app:layout_constraintStart_toStartOf="@id/guidelineIntroLeft"
            app:layout_constraintTop_toBottomOf="@id/tvAccountAlready" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineIntroLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineIntroRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>